# team7-philanthropy-advisor-project

./: .gitignore  README.md  ai_assistant.py  anomaly_detection.py  app.py  data_conversion.py  data_processing.py  gala_data_exploration.ipynb  pyproject.toml
.streamlit/: config.toml
data/: 22zpallagi_cleaned.csv
data/original/: 22zpallnoagi.csv
src/: ass1.py  ass1visualize.py
