[project]
name = "team7-philanthropy-advisor-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "altair>=6.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "streamlit>=1.54.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
    "xlrd>=2.0.2",
]
